--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -69,7 +69,7 @@
 				<div id="simApp">					
 					<textarea name="my" placeholder="io" v-model="input" key.13="update"></textarea>
 				</div>
-				
+
 				<script>
 					new Vue({
 						el:"#simApp",
@@ -78,7 +78,7 @@
 						},
 						methods:{
 							update:function(){
-
+								// ed.cm.setValue
 							}
 						}
 					})
