--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -17,73 +17,19 @@
 		<link rel="stylesheet" href="/css/main.css">
 		<link rel="apple-touch-icon" sizes="180x180" href="/images/ly-ios-precomposed.png">
 		<script data-main="/js/main" src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.17/require.min.js"></script>
+
 	</head>
 	<body>
-		<nav id="header" class="navbar navbar-lilybin navbar-unresponsive navbar-static-top">
-			<div class="container-fluid">
-				<div class="navbar-header hidden-xs">
-					<span class="navbar-brand navbar-brand-img">
-						<img width="30" height="30" src="/images/ly.svg">
-					</span>
-					<span class="navbar-brand">
-						<a href="/">LilyBin</a>
-						<a href="https://github.com/LilyBin/LilyBin" title="View Sources" data-toggle="tooltip"><i class="fa fa-github"></i></a>
-					</span>
-				</div>
-				<ul class="nav navbar-nav">
-					<li class="visible-xs"><a href="/">LilyBin</a></li>
-					<li><a href="#" class="noop" id="preview_button" title="<kbd><kbd>Ctrl</kbd>+<kbd>Enter</kbd></kbd>" data-toggle="tooltip">Preview</a></li>
-					<li class="dropdown">
-						<a href="#" id="version_btn" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">LilyPond <span class="caret"></span></a>
-						<ul class="dropdown-menu" id="version_sel" role="menu">
-							<li><a href="#" class="noop" data-version="stable">
-								Latest Stable
-							</a></li>
-							<li><a href="#" class="noop" data-version="unstable">
-								Latest Unstable
-							</a></li>
-						</ul>
-					</li>
-					<li><a href="#" id="reset_button">Reset</a></li>
-					<li class="dropdown">
-						<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Save to <span class="caret"></span></a>
-						<ul class="dropdown-menu" role="menu">
-							<li><a href="#" class="noop" id="save_button" title="<kbd><kbd>Ctrl</kbd>+<kbd>S</kbd></kbd>" data-toggle="tooltip">LilyBin</a></li>
-							<li><a href="#" class="noop" id="save_to_dropbox">Dropbox</a></li>
-						</ul>
-					</li>
-					<li><a href="#" class="noop" id="undo_button" title="<kbd><kbd>Ctrl</kbd>+<kbd>Z</kbd></kbd>" data-toggle="tooltip">Undo</a></li>
-					<li><a href="#" class="noop" id="redo_button" title="<kbd><kbd>Ctrl</kbd>+<kbd>Y</kbd></kbd>" data-toggle="tooltip">Redo</a></li>
-					<li class="dropdown">
-						<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Open <span class="caret"></span></a>
-						<ul class="dropdown-menu" role="menu">
-							<li><a href="#" class="noop" id="open_from_dropbox">Dropbox</a></li>
-						</ul>
-					</li>
-				</ul>
-			</div>
-		</nav>
+	<!-- vue transformed... -->
+	<div id="nav"></div>
+
+	<!-- mine -->
+	<div id="app"></div>
+
+	<div id="poids"></div>
+
+
 		<div id="main">
-			<div class="col-sm-5" id="code_container">
-					
-				<div id="simApp">					
-					<textarea name="my" placeholder="io" v-model="input" key.13="update"></textarea>
-				</div>
-
-				<script>
-					new Vue({
-						el:"#simApp",
-						data:{
-							input:""
-						},
-						methods:{
-							update:function(){
-								// ed.cm.setValue
-							}
-						}
-					})
-				</script>
-
 				<textarea id="code"></textarea>
 			</div>
 			<div class="col-sm-7" id="preview_container">
